[package]
name = "freya-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "hooks"] }
dioxus-std = { version = "0.4.1", features = ["utils"] }
freya = { git = "https://github.com/marc2332/freya", version = "0.1.8" }
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["rt", "macros", "time"] }
wmi = "0.13.1"
